# USB-Screen

./: .gitignore  135x240_black_1fps.screen  160x128.screen  160x128_black.screen  160x128_black_0.5fps.screen  160x128_black_10fps.screen  160x128_black_1fps.screen  160x128_video2_10fps.screen  240x240_black_1fps.screen  320x240.screen  320x240_1fps.screen  320x240_2fps.screen  320x240_black.screen  320x240_black_1fps.screen  480x320_5fps.screen  Cargo.toml  Cross.toml  LICENSE  README.md  build-aarch64-musl.sh.md  build-aarch64.cmd  build-aarch64.sh  build-x86_64_linux.sh  build-x86_64_windows.cmd  build-x86_64_windows_no_openhardware.cmd  build.cmd  build.rs  build_OpenHardwareMonitorService.cmd  build_aarch64.cmd  build_x86_64_linux.cmd  cities.json  run.cmd  run.sh
.cargo/: config.toml
LibreHardwareMonitorNativeAot/: HardwareWrapper.cs  LhmNativeAotWrapper.csproj  hardware_wrapper.h
OpenHardwareMonitorService/: .gitignore  App.config  OpenHardwareMonitorService.csproj  OpenHardwareMonitorService.sln  Program.cs  app.manifest
OpenHardwareMonitorService/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
src/: editor.rs  main.rs  monitor.rs  nmc.rs  rgb565.rs  screen.rs  usb_screen.rs  utils.rs  widgets.rs  wifi_screen.rs  windows_hardware_monitor.rs  yuv422.rs
view/: main.slint
view/widgets/: abutton.slint  widgets.slint
