[package]
name = "USB-Screen"
version = "1.1.8"
edition = "2021"

[features]
# aarch64 linux
# default = ["v4l-webcam", "usb-serial"]
# windows
default = ["editor", "tray", "nokhwa-webcam", "usb-serial"]
# x86_64 linux
# default = ["editor", "v4l-webcam", "usb-serial"]
# 飞牛OS
# default = ["v4l-webcam", "usb-serial"]
nokhwa-webcam = ["nokhwa"]
v4l-webcam = ["v4l"]
editor = ["slint"]
tray = ["tray-icon", "tao"]
usb-serial = ["serialport"]

[dependencies]
anyhow = "1"
sysinfo = "0.30.12"
chrono = "0.4.39"
rust-ephemeris = "0.1.0"
chinese-number = "0.7.7"
precord-core = "0.7.11"
serde_json = "1.0"
once_cell = "1.20.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
offscreen-canvas = { git = "https://github.com/planet0104/offscreen-canvas", tag = "0.1.9"}
# bincode = "2.0.0-rc.3"
lz4_flex = "0.11.3"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.13.1", features = [ "v4" ]}
image = "0.25.1"
hex_color = "3.0.0"
rfd = "0.15.2"
gif = "0.13.1"
gif-dispose = "5.0.1"
env_logger = "0.11.6"
log = "0.4.25"
num_cpus = "1"
ttf-parser = "0.25.1"
local-ip-address = "0.6.3"
nusb = "0.1.12"
futures-lite = "2.6.0"
serialport = { version="4.7.0", optional = true }
slint = { version="1.9.2", optional = true, default-features = false, features = [
  "std",
  "backend-default",
  "renderer-femtovg",
  "renderer-software",
  "compat-1-2",
] }
nokhwa = { version="0.10.7", features = ["input-native"], optional = true }
human-repr = "1.1.0"
fast_image_resize = "5.1.1"
async-std = { version = "1", features = ["attributes"] }
crossbeam-channel = "0.5.14"
tungstenite = "0.26.1"
# embedded-graphics = "0.8.1"
# byteorder = "1"

[target.'cfg(not(target_os = "linux"))'.dependencies]
tray-icon = { version="0.19.2", optional = true }
tao = { version="0.31.1", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [ "Win32_System_Performance", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_Security", "Win32_UI_Shell", "Win32_System_Registry" ]}
tiny_http = "0.12"

[target.'cfg(not(windows))'.dependencies]
psutil = "3.3.0"

[target.'cfg(target_os = "linux")'.dependencies]
v4l = { version="0.14.0", default-features = false, features = ["v4l2"], optional = true }

[build-dependencies]
slint-build = "1.9.2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1